# GNN

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
models/gcn/: GCN.py  trainer.py  utils.py
